# DataCollectionLabFinalProject

./: README.md  pyproject.toml
DataCollectionLab1/code/analysis/: graphs.ipynb
DataCollectionLab1/code/createWorkOpportunitiesBadge/: createWorkOpportunitiesBadge.ipynb
DataCollectionLab1/code/dataScraping/: LinkdinCompaniesScraper.py  cost_calculation.py  linkedin_spaceX.html  linkedin_taboola.html  linkedin_taboola_employees.html  searchScraper.ipynb  work offline with html.py
DataCollectionLab1/code/predCountry/: PredCountryModel.ipynb  collectCountryDataWithGemini.py
DataCollectionLab1/data/countryNames/: American.txt  Australian.txt  Brazilian.txt  Canadian.txt  Danish.txt  Egyptian.txt  Finnish.txt  Hindi.txt  Indonesian.txt  Israeli.txt  Malaysian.txt  Mexican.txt  Norwegian.txt  Pakistani.txt  Saudi Arabian.txt  South African.txt  Swedish.txt  Swiss.txt  Turkish.txt  Ukrainian.txt
DataCollectionLab1/data/modelsWeights/: countryWeights.pkl
