[tool.poetry]
name = "DataCollectionLab1"
version = "0.1.0"
description = ""
authors = ["Yarden4998 <yardenk@campus.technion.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
bs4 = "^0.0.2"
pandas = "^2.2.1"
playwright = "^1.42.0"
requests = "^2.31.0"
langchain = "^0.1.14"
langchain-google-genai = "^1.0.1"
torch = "^2.2.2"
unidecode = "^1.3.8"
pyspark = "^3.5.1"
spark = "^0.2.1"
findspark = "^2.0.1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
